--- a/styles.css
+++ b/styles.css
@@ -44,13 +44,13 @@ nav {
     letter-spacing: 0.04em;
 }
 .nav-logo {
-    position: absolute;
+    justify-content: center;
     left: 2rem;
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    font-size: 1.25rem;
-    font-weight: 900;
+    font-size: 1.5rem;
+    font-weight: 700;
     color: #78bfff;
     cursor: pointer;
     user-select: none;
@@ -153,10 +153,21 @@ main {
     margin-bottom: 10px;
     color: #a3bffa;
 }
+.container {
+    max-width: 720px;
+    margin: 3rem auto;
+    background: rgba(0,0,0,0.5);
+    padding: 2rem 3rem;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.7);
+}
+section {
+    margin-bottom: 2rem;
+}
 h1 {
     font-weight: 700;
     font-size: 2.8rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     color: #ccdefa;
     text-align: center;
     letter-spacing: 0.04em;
@@ -196,9 +207,10 @@ section {
 }
 h2 {
     font-weight: 600;
-    color: #a3bffa;
+    color: #ffd966;
     font-size: 1.8rem;
     margin-bottom: 0.7rem;
+    border-bottom:  2px solid #ffd966;
     text-shadow: 0 1px 2px rgba(0,0,0,0.3);
 }
 p {
