--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ button,
 h1,
 h2,
 h3,
+h4,
 li,
 nav,
 p,
@@ -30,6 +31,7 @@ a {
     color: inherit;
     text-decoration: none;
 }
+/* --------- Navbar Styles ---------- */
 nav {
     background: rgba(0,26,80,0.85);
     backdrop-filter: saturate(180%) blur(20px);
@@ -94,7 +96,6 @@ nav {
     background-color: white;
     margin: 3px 0;
 }
-
 nav ul {
     display: flex;
     list-style: none;
@@ -125,7 +126,7 @@ nav ul li a.active::after,
 nav ul li a:hover::after {
     width: 100%;
 }
-
+/* --------- Main Styles ---------- */
 main {
     max-width: 720px;
     margin: 3rem auto 4rem;
@@ -137,11 +138,12 @@ main {
     color: #e1e9f1;
     flex-grow: 1;
 }
+/* --------- Quiz Styles ---------- */
 .quiz-container {
     background: rgba(255,255,255,0.05);
     padding: 3rem 2.5rem;
     border-radius: 12px;
-    max-width: 700px;
+    max-width: 720px;
     margin: 3rem auto;
     box-shadow: 0 10px 25px rgba(0,0,0,0.35);
     backdrop-filter: saturate(180%) blur(15px);
@@ -149,18 +151,20 @@ main {
 .question {
     margin-bottom: 20px;
 }
-.question h3 {
+.question h4 {
     margin-bottom: 10px;
-    color: #a3bffa;
+    color: #ffffff;
 }
+/* --------- Tooltip Styles ---------- */
 .tooltip {
     position: relative;
     background: rgba(0,0,0,0.3);
     padding: 5px 12px;
     margin-left: 5px;
+    margin-top: -30px;
     border-radius: 100%;
     font-size: 20px;
-    cursor: pointer;
+    cursor: help;
 }
 .tooltip::after,
 .tooltip::before {
@@ -180,21 +184,17 @@ main {
 .tooltip::after {
     content: attr(data-tooltip);
     background: rgba(0,0,0,0.3);
-    left: 100%;
     top: -20px;
-    transform: translateY(-50%);
+    transform: translateY(-100%);
     font-size: 14px;
     margin-left: -150px;
     width: 300px;
     border-radius: 10px;
     color: #fff;
-    white-space: nowrap;
-    opacity: 0;
     padding: 14px;
-    visibility: hidden;
     transition: opacity 0.2s ease;
 }
-/* Hover states */
+/* Hover Tooltip states */
 .tooltip:hover::after,
 .tooltip:hover::before {
     opacity: 1;
@@ -222,7 +222,7 @@ h1 {
 label {
     display: block;
     font-weight: 600;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     margin-bottom: 0.8rem;
     color: #a3bffa;
     user-select: none;
@@ -337,7 +337,7 @@ footer {
     box-shadow: inset 0 1px 5px rgba(255,255,255,0.1);
     margin-top: auto;
 }
-/* Responsiveness */
+/* Responsiveness Atur ulang posisi untuk tampilan kecil */
 @media (max-width: 768px) {
     main {
         margin: 2rem 1.2rem 3.5rem;
@@ -357,6 +357,9 @@ footer {
     }
     .toggle {
         display: flex;
+    }
+    .tooltip {
+        margin-top: -20px;
     }
     #hasil-simulasi {
         font-size: 1rem;
